--- a/assets/sass/app.sass
+++ b/assets/sass/app.sass
@@ -4,4 +4,5 @@
 @import "templates/home";
 @import "templates/header";
 @import "templates/footer";
+@import "templates/tests";
 @import "templates/responsive";
