--- a/assets/sass/templates/_home.sass
+++ b/assets/sass/templates/_home.sass
@@ -5,6 +5,7 @@
 			+make-md-column(3)
 			+make-sm-column(3)
 			.thumbnail
+				border-bottom: 3px solid #ddd
 				.caption
 					h3
 						font-size: 20px
